Altera o retorno dos metodos/ Implemnta propriedade de Arestas e Vertices/ Implementa Teorema de Ore

--- a/AV1/trabalho2.ipynb
+++ b/AV1/trabalho2.ipynb
@@ -16,11 +16,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Grafo não Hamiltoniano pelo Teorema de Dirac\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Grafo não Hamiltoniano pelo Teorema de Dirac'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -32,6 +35,26 @@
     "G1.adicionaAresta(5,2)\n",
     "G1.grauVertice(4)\n",
     "G1.dirac()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 4]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G1.vertices"
    ]
   },
   {
